# brogl

./: .gitignore  CMakeLists.txt  README.md
brogl/: boilerplate.h  brogl.h  defs.h  tools.h
brogl/implement/: boilerplate.cpp  mathdefs.h  tools.cpp
brogl/src/: boilerplate.cpp  tools.cpp
brogl_game/: _inputmanager.h  _objectmanager.h  _rendermanager.h  _scenemanager.h  _sysmanager.h  _timemanager.h  brogl_game.h  component.h  engine.h  gameobject.h  managers.h  scene.h
brogl_game/implement/: _inputmanager.cpp  _objectmanager.cpp  _rendermanager.cpp  _scenemanager.cpp  engine.cpp  gameobject.cpp  scene.cpp
examples/: example.h  examples.h
examples/texturing/: shader.frag  shader.vert  texturing.cpp  texturing.h
src/brgl/: boilerplate.cpp  boilerplate.h  brgl.cpp  brgl.h  primitives.cpp  primitives.h
src/demo/: demo.cpp  demo.h  main.cpp
